test/tests/compiler/5_local_variables/valid/exp_then_declaration.plx
pub fn main(none) i32 {
    a: i32 = -2593
    a = a % 3
    b: i32 = -a
    return b
}
