test/tests/compiler/5_local_variables/invalid_parse/plx1_keyword_as_type.plx
pub fn main(none) i32 {
    a: true;
    return a
}
